plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.0'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'org.asciidoctor.jvm.convert' version '4.0.3'
}

group = 'tech.seccertificate'
version = '1.1.0'
description = 'A project for designing and implementing a secure system to define, generate, and manage PDF certificates.'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-integration'
    implementation 'org.springframework.boot:spring-boot-starter-restclient'
    // JWT Token Generation (using jjwt)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // OAuth2 Resource Server for JWT validation
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Jackson for JSON processing
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.core:jackson-core'
    implementation 'com.fasterxml.jackson.core:jackson-annotations'

    // Spring Integration
    implementation 'org.springframework.integration:spring-integration-amqp'
    implementation 'org.springframework.integration:spring-integration-http'
    implementation 'org.springframework.integration:spring-integration-jdbc'
    implementation 'org.springframework.integration:spring-integration-jpa'

    // Database
    implementation 'org.springframework.boot:spring-boot-starter-liquibase'
    implementation 'org.projectlombok:lombok:1.18.38'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:rabbitmq'
    testImplementation 'org.testcontainers:postgresql'
    runtimeOnly 'org.postgresql:postgresql'

    // PDF Generation
    implementation 'com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10'
    implementation('com.openhtmltopdf:openhtmltopdf-svg-support:1.0.10') {
        exclude group: 'org.apache.xmlgraphics', module: 'batik-transcoder'
    }
    implementation 'org.apache.xmlgraphics:batik-transcoder:1.17'
    implementation 'com.openhtmltopdf:openhtmltopdf-java2d:1.0.10'

    // MinIO/S3 Storage
    implementation 'io.minio:minio:8.6.0'

    // QR Code Generation
    implementation 'com.google.zxing:core:3.5.3'
    implementation 'com.google.zxing:javase:3.5.3'

    // OpenAPI Documentation (SpringDoc with Scalar UI)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-scalar:2.8.14'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Development Tools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-restdocs'
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-amqp-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jdbc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-restclient-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-thymeleaf-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.integration:spring-integration-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'org.springframework.restdocs:spring-restdocs-asciidoctor'

    // Testcontainers for integration testing
    // Using version 1.19.x which is compatible with Spring Boot 4.0.0
    testImplementation platform('org.testcontainers:testcontainers-bom:1.19.8')
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:minio'

    // Awaitility for async testing
    testImplementation 'org.awaitility:awaitility:4.2.0'
}

tasks.named('test') {
    useJUnitPlatform()
    // Fail the build if tests fail
    failFast = false

    // Show test output
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = false
    }

    // Run tests in parallel for faster execution
    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
}

// Task to run tests before bootRun (optional, can be skipped with -x test)
tasks.named('bootRun') {
    // Uncomment the line below to always run tests before bootRun
    // dependsOn test

    // Or use: ./gradlew bootRun -x test to skip tests for faster development
}

// Custom task: bootRunWithTests - explicitly runs tests before bootRun
tasks.register('bootRunWithTests') {
    group = 'application'
    description = 'Runs tests before starting the Spring Boot application'
    dependsOn test, bootRun
    bootRun.mustRunAfter test
}

// Task: verify - runs tests and checks (useful for CI/CD)
tasks.named('check') {
    dependsOn test
}

// Task: build - ensures tests pass before building
tasks.named('build') {
    dependsOn test
    // Tests are already included in build lifecycle, but this makes it explicit
}

// Spring REST Docs configuration
ext {
    snippetsDir = file('build/generated-snippets')
}

tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    dependsOn test
    baseDirFollowsSourceFile()
}

// Javadoc configuration
tasks.named('javadoc') {
    options {
        tags = [
            'Project:a:Project:'
        ]
        addStringOption('Xdoclint:none', '-quiet')
    }
}

// Boot JAR configuration
tasks.named('bootJar') {
    dependsOn asciidoctor
    from("${asciidoctor.outputDir}") {
        into 'static/docs'
    }
}
